# KnuthGraph

./: CMakeLists.txt  README.md  find_bad_var_acs.py
.github/workflows/: main.yml
inc/: graph.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  ansgen.cpp  end2end  test.cpp  testgen.py
tests/in/: 10test.in  1test.in  2test.in  3test.in  4test.in  5test.in  6test.in  7test.in  8test.in  9test.in
